5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4190/executions/1679_1100.log
== TEST (2019-04-25 17:23:17) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = input(int('Insira um valor: '))
print('Entrada:', a)

if (x==2):
	print('Animal: Tartaruga')
elif (x==5):
	print('Animal: Garça')
elif (x==10):
	print('Animal: Arara')
elif (x==20):
	print('Animal: Mico-leão-dourado')
elif (x==50):
	print('Animal: Onça-pintada')
elif (x==100):
	print('Animal: Garoupa')
else:
	print('Animal: Invalido')
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    x = input(int('Insira um valor: '))
ValueError: invalid literal for int() with base 10: 'Insira um valor: '
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:23:49) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input('Insira um valor: '))
print('Entrada:', a)

if (x==2):
	print('Animal: Tartaruga')
elif (x==5):
	print('Animal: Garça')
elif (x==10):
	print('Animal: Arara')
elif (x==20):
	print('Animal: Mico-leão-dourado')
elif (x==50):
	print('Animal: Onça-pintada')
elif (x==100):
	print('Animal: Garoupa')
else:
	print('Animal: Invalido')
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print('Entrada:', a)
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:24:12) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input('Insira um valor: '))
print('Entrada:', x)

if (x==2):
	print('Animal: Tartaruga')
elif (x==5):
	print('Animal: Garça')
elif (x==10):
	print('Animal: Arara')
elif (x==20):
	print('Animal: Mico-leão-dourado')
elif (x==50):
	print('Animal: Onça-pintada')
elif (x==100):
	print('Animal: Garoupa')
else:
	print('Animal: Invalido')
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:24:19) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input('Insira um valor: '))
print('Entrada:', x)

if (x==2):
	print('Animal: Tartaruga')
elif (x==5):
	print('Animal: Garça')
elif (x==10):
	print('Animal: Arara')
elif (x==20):
	print('Animal: Mico-leão-dourado')
elif (x==50):
	print('Animal: Onça-pintada')
elif (x==100):
	print('Animal: Garoupa')
else:
	print('Animal: Invalido')
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:24:25) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input('Insira um valor: '))
print('Entrada:', x)

if (x==2):
	print('Animal: Tartaruga')
elif (x==5):
	print('Animal: Garça')
elif (x==10):
	print('Animal: Arara')
elif (x==20):
	print('Animal: Mico-leão-dourado')
elif (x==50):
	print('Animal: Onça-pintada')
elif (x==100):
	print('Animal: Garoupa')
else:
	print('Animal: Invalido')
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:25:01) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input('Insira um valor: '))
print('Entrada:', x)

if (x==2):
	print('Animal: Tartaruga')
elif (x==5):
	print('Animal: Garca')
elif (x==10):
	print('Animal: Arara')
elif (x==20):
	print('Animal: Mico-leao-dourado')
elif (x==50):
	print('Animal: Onca-pintada')
elif (x==100):
	print('Animal: Garoupa')
else:
	print('Animal: Invalido')
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:25:05) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input('Insira um valor: '))
print('Entrada:', x)

if (x==2):
	print('Animal: Tartaruga')
elif (x==5):
	print('Animal: Garca')
elif (x==10):
	print('Animal: Arara')
elif (x==20):
	print('Animal: Mico-leao-dourado')
elif (x==50):
	print('Animal: Onca-pintada')
elif (x==100):
	print('Animal: Garoupa')
else:
	print('Animal: Invalido')
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:25:10) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input('Insira um valor: '))
print('Entrada:', x)

if (x==2):
	print('Animal: Tartaruga')
elif (x==5):
	print('Animal: Garca')
elif (x==10):
	print('Animal: Arara')
elif (x==20):
	print('Animal: Mico-leao-dourado')
elif (x==50):
	print('Animal: Onca-pintada')
elif (x==100):
	print('Animal: Garoupa')
else:
	print('Animal: Invalido')
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:25:14) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input('Insira um valor: '))
print('Entrada:', x)

if (x==2):
	print('Animal: Tartaruga')
elif (x==5):
	print('Animal: Garca')
elif (x==10):
	print('Animal: Arara')
elif (x==20):
	print('Animal: Mico-leao-dourado')
elif (x==50):
	print('Animal: Onca-pintada')
elif (x==100):
	print('Animal: Garoupa')
else:
	print('Animal: Invalido')
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:25:17) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input('Insira um valor: '))
print('Entrada:', x)

if (x==2):
	print('Animal: Tartaruga')
elif (x==5):
	print('Animal: Garca')
elif (x==10):
	print('Animal: Arara')
elif (x==20):
	print('Animal: Mico-leao-dourado')
elif (x==50):
	print('Animal: Onca-pintada')
elif (x==100):
	print('Animal: Garoupa')
else:
	print('Animal: Invalido')
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:25:20) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input('Insira um valor: '))
print('Entrada:', x)

if (x==2):
	print('Animal: Tartaruga')
elif (x==5):
	print('Animal: Garca')
elif (x==10):
	print('Animal: Arara')
elif (x==20):
	print('Animal: Mico-leao-dourado')
elif (x==50):
	print('Animal: Onca-pintada')
elif (x==100):
	print('Animal: Garoupa')
else:
	print('Animal: Invalido')
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:25:24) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input('Insira um valor: '))
print('Entrada:', x)

if (x==2):
	print('Animal: Tartaruga')
elif (x==5):
	print('Animal: Garca')
elif (x==10):
	print('Animal: Arara')
elif (x==20):
	print('Animal: Mico-leao-dourado')
elif (x==50):
	print('Animal: Onca-pintada')
elif (x==100):
	print('Animal: Garoupa')
else:
	print('Animal: Invalido')
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:25:29) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input('Insira um valor: '))
print('Entrada:', x)

if (x==2):
	print('Animal: Tartaruga')
elif (x==5):
	print('Animal: Garca')
elif (x==10):
	print('Animal: Arara')
elif (x==20):
	print('Animal: Mico-leao-dourado')
elif (x==50):
	print('Animal: Onca-pintada')
elif (x==100):
	print('Animal: Garoupa')
else:
	print('Animal: Invalido')
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 17:25:39) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input('Insira um valor: '))
print('Entrada:', x)

if (x==2):
	print('Animal: Tartaruga')
elif (x==5):
	print('Animal: Garca')
elif (x==10):
	print('Animal: Arara')
elif (x==20):
	print('Animal: Mico-leao-dourado')
elif (x==50):
	print('Animal: Onca-pintada')
elif (x==100):
	print('Animal: Garoupa')
else:
	print('Animal: Invalido')
-- EXECUTION TIME:
0.253965
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
